<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="primaryColor">#e62118</color>
    <color name="primaryColorDark">#c31c13</color>
    <color name="tabsScrollColor">#8a140e</color>

    <string name="newTricksAvaiable">We found new tricks for Skatepedia.</string>
    <string name="download">Download</string>
    <string name="later">Later</string>
    <string name="downloadcomplete">All tricks were downloaded successfully</string>
    <string name="start">Start Skatepedia</string>
    <string name="notAgain">Don\'t show Again</string>
    <string name="app_name">Skatepedia</string>
    <string name="title_section1">ABC</string>
    <string name="title_section2">Difficulties</string>
    <string name="title_section3">Trick modes</string>
    <string name="action_settings">Settings</string>
    <string name="search_Action">Search</string>
    <string name="tricksContainer">tricksContainer</string>
    <string name="lang">Sprache:  </string>
    <string name="clearData">Deletes Application data. Use this if you have troubles</string>
    <string name="restart">Please restart the Application</string>
    <!-- >           Basic Headers & Contents            < -->
    <string name="generell"> Skating started 1950 when surf....</string>
    <string name="allgemein">General</string>
    <string name="allgemein_cont">I\'m also a Text about Skating in general.</string>
    <string name="pushing">pushing</string>
    <string name="pushing_cont">Text about Pushing</string>
    <string name="beginnerTricks">Tricks for beginner</string>
    <string name="beginnerTricks_cont">Text about tricks for beginner</string>
    <string name="trickarten">Kind of tricks</string>
    <string name="trickarten_cont">Also a text about different kinds</string>

    <string-array name="sortier_array">
        <item>trick modes</item>
        <item>Alphabetical</item>
        <item>Difficulty</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="activitysTitles">
        <item>List with skate tricks</item>
        <item>About Skateboarding</item>
        <item>S.K.A.T.E</item>
        <item>Add new trick</item>
        <item>Map</item>
        <item>Settings</item>
    </string-array>

    <string name="Activity_Map_Comments">Comments</string>
    <string name="downloadOrStreamDialogBoxMessageText">This Application needs stuff from the internet. You can either download all data (20MB) or stream them.</string>
    <string name="downloadOrStreamDialogBoxAnswerDownload">Download</string>
    <string name="downloadProgressBarDialogDownloadText">Dowbloading..</string>
    <string name="downloadProgressBarDialogStreamText">Please wait a moment</string>
    <string name="downloadOrStreamDialogBoxAnswerStream">Stream</string>
    <string name="ErrorMessageNoInternettConnection">No internet connection</string>
    <string name="ErrorMessageDownladFailed">Download failed</string>
    <string name="activityMapNewCommentStringTextBox">Add a comment</string>
    <string name="activityMapNewCommentNameStringTextBox">Name</string>
    <string name="activityMapNewCommentSendStringTextBox">Submit</string>
    <string name="UpdateDialogMessage">Found Updates. Download?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="SkateTrickDifficultyStringEasy">easy</string>
    <string name="SkateTrickDifficultyStringMedium">medium</string>
    <string name="SkateTrickDifficultyStringHard">hard</string>
    <string name="SkateTrickDifficultyStringReallyHard">really hard</string>

    <string-array name="BasicTabsHeader">
        <item>History</item>
        <item>General</item>
        <item>First steps</item>
    </string-array>

    <string name="Activity_settings_Toast_ChangeView">Please change the view to apply changes.</string>
    <string name="SkateGameStringFailed">failed</string>
    <string name="SkateGameStringLanded">landed</string>
    <string name="markerRateDeleteDialogDescription">description</string>
    <string name="newTrickTrickName">name </string>
    <string name="newTrickTrickDifficulty">Difficulty</string>
    <string name="newTrickTrickKind">trick modes</string>
    <string name="SettingsNetwork">network settings</string>
    <string name="SaveOnPhone">save videos on phone</string>
    <string name="nollie">Also use switch/nollie tricks</string>
    <string name="oldSchool">Also use old-school tricks </string>
    <string name="easyerTricks">Also use easier tricks</string>
    <string name="useMastered">Just select tricks I can</string>
    <string name="upload">Upload Trick</string>
    <string name="rateMarker">Rate marker</string>

    <string-array name="newTrickArr">
        <item> Video</item>
        <item> Info’s</item>
        <item> Pictures</item>
    </string-array>
    <string-array name="language">
        <item>German</item>
        <item>English</item>
    </string-array>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Really-Hard</item>
    </string-array>
    <string-array name="kind">
        <item>Ollie</item>
        <item>Flip trick</item>
        <item>Spin-Trick</item>
        <item>Slide</item>
        <item>Grind</item>
        <item>Grab</item>
        <item>Old-School</item>
    </string-array>
    <string-array name="markers">
        <item>Skate-Park</item>
        <item>Skate-Shop</item>
        <item>Skate-Spot</item>
    </string-array>

    <string name="ErrVideoToLong">Your Video can\'t be longer than 10 seconds </string>
    <string name="addVideo">Add a video</string>

    <string-array name="toggle">
        <item>Parks on/off</item>
        <item>Shops on/off</item>
        <item>Spots on/off</item>
    </string-array>

    <string name="errToManyMarkers">You can\'t delete so many markers at once. Please wait</string>
    <string name="cancel">Cancel</string>
    <string name="warningDelete">Are you sure to delete this Marker</string>
    <string name="delete">delete</string>
    <string name="ErrorToManyVotes">Due to the amount of votes this marker can\'t be removed.</string>
    <string name="longPressToDelete">Press long to exit the application</string>
    <string name="nextMarker">nearest Marker</string>
    <string name="swipeFingerToOpenNext">Please swipe with your finger from right to left to open a list with the nearest markers.</string>
    <string name="nextSpot">nearest spot</string>
    <string name="clickSpotMarkerForInfos">Press one of the markers for further information.</string>
    <string name="enable_other_maps">Enable other Maps</string>
    <string name="click_here_to_change_the_map">Click here to change the Map</string>
    <string name="noTricksAvaiable">No tricks left</string>
    <string name="haveVs">" has won vs "</string>
    <string name="with">" with "</string>
    <string name="won">" "</string>
    <string name="to">" to "</string>
    <string name="comments">Comments</string>
    <string name="general">General</string>
    <string name="SettingsUpdates">Automatically look for updates</string>
    <string name="SettingsExtSave">Use extern Storage</string>
    <string name="language">Language</string>
    <string name="tellanguage">Use language setting of mobile phone</string>
    <string name="langErrDialog">Sorry. This part of the application is not avaiable in english now</string>
    <string name="Err_Crop">Sorry, your Phone does not support croping images. Upload</string>
    <string name="showcase_detail_marker">Press for further information</string>
    <string name="Err_not_found">Datei nicht gefunden. Haben sie alle Daten heruntergeladen?</string>

</resources>