<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4f4f4"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize" >
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#f4f4f4"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <AutoCompleteTextView
                        android:id="@+id/editSkater1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Skater 1"
                        android:inputType="textPersonName" >

                        <requestFocus />
                    </AutoCompleteTextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:gravity="center"
                        android:text="VS"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <AutoCompleteTextView
                        android:id="@+id/editSkater2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Skater 2"
                        android:inputType="textPersonName" >

                        <requestFocus />
                    </AutoCompleteTextView>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_section2"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/diff_Spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical" >
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/switchBox"
                        android:text="@string/nollie" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/OldSchoolBox"
                        android:text="@string/oldSchool" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/easyerTricks"
                        android:text="@string/easyerTricks" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/masteredBox"
                        android:text="@string/useMastered" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="startSkate"
                        android:text="S.K.A.T.E" />
                </TableRow>
            </LinearLayout>
        </ScrollView>

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>